added contents to the website

--- a/apply.html
+++ b/apply.html
@@ -58,52 +58,55 @@
 			</nav>
 		</header>
 
-		<div class="section-container no-padding">
+		<div class="section-container">
 			<div class="container">
 				<div class="row">
-					<!-- <div class="col-xs-12">
-						<div id="map"></div>
-					</div> -->
+					<div class="col-xs-12 col-md-8 col-md-offset-2">
+						<div class="section-container-spacer">
+							<div class="text-center">
+								<h1>Application Closed</h1>
+							</div>
+							<p>
+								The application for this year has been closed. However, you can drop your details with us through the
+								contact form or join our newsletter so that you can be duly informed when the application opens for the next
+								cohorts which will be from November 20 - Novermber 30. Details about the courses and their respective prices
+								can be found <a href="./courses.html">here.</a> Watch out this space for more information when the
+								applcation opens.
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-6">
+						<div class="download-card">
+							<p>Download GSE Unilroin <br />mobile app on iOS devices</p>
+							<br />
+							<a href="#" title=""> <img src="./assets/images/app-store-apple.svg" class="img-responsive" alt="" /></a>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="download-card">
+							<p>Download GSE Unilroin <br />mobile app on Android devices</p>
+							<br />
+							<a href="#" title=""> <img src="./assets/images/google-play.svg" class="img-responsive" alt="" /></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="section-container">
+			<div class="container">
+				<div class="row">
 					<div class="col-xs-12">
-						<div class="row">
-							<div class="col-md-6">
-								<form action="" class="reveal-content contact-form">
-									<div class="form-group">
-										<input type="name" class="form-control" id="name" placeholder="Full name" />
-									</div>
-									<div class="form-group">
-										<input type="email" class="form-control" id="email" placeholder="Email" />
-									</div>
-									<div class="form-group">
-										<input type="text" class="form-control" id="subject" placeholder="Subject" />
-									</div>
-									<div class="form-group">
-										<textarea class="form-control" rows="3" placeholder="Enter your message"></textarea>
-									</div>
-									<button type="submit" class="btn btn-primary btn-lg">Send</button>
-								</form>
-							</div>
-
-							<div class="col-md-5 col-md-offset-1">
-								<h3>Location</h3>
-
-								<div>
-									<p>University of Ilorin <br />Nigeria</p>
-								</div>
-								<div>
-									<p>gse@unilorin.com<br />+234 812 3456 789</p>
-								</div>
-
-								<div>
-									<h3>Apply</h3>
-								</div>
-								<div>
-									<p>
-										To apply for a any role with our team, please feel free to send us your application profile on CV to
-										: gse@unilorin.com
-									</p>
-								</div>
-							</div>
+						<div class="text-center">
+							<blockquote>
+								<p>
+									“Coding is a language spoken by engineers to get problems solved”
+									<small class="">Ray Collins</small>
+								</p>
+							</blockquote>
 						</div>
 					</div>
 				</div>
