--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<title>Title page</title>
 
-		<link href="./main.a3f694c0.css" rel="stylesheet" />
+		<link href="./main.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -45,12 +45,11 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="./index.html" title="Homepage" class="active">Home</a></li>
 							<li><a href="./about.html" title=""> About</a></li>
-							<li><a href="./pricing.html" title=""> Courses </a></li>
-                            <li><a href="./contact.html" title=""> Contact</a></li>
-							<li><a href="./contact.html" title="">Staffs</a></li>
+							<li><a href="./courses.html" title=""> Courses </a></li>
+							<li><a href="./contact.html" title=""> Contact</a></li>
 							<li>
 								<p>
-									<a href="./download.html" class="btn btn-primary navbar-btn" title="">Apply</a>
+									<a href="./apply.html" class="btn btn-primary navbar-btn" title="">Apply</a>
 								</p>
 							</li>
 						</ul>
@@ -72,7 +71,7 @@
 							Learn to be certified to be a web developer or software developer in just three months. We partner with the
 							University of Ilorin to get you certified.
 						</p>
-						<a href="./download.html" title="" class="btn btn-lg btn-primary">Apply Now</a>
+						<a href="./apply.html" title="" class="btn btn-lg btn-primary">Apply Now</a>
 					</div>
 				</div>
 			</div>
@@ -98,13 +97,13 @@
 							<i class="fa fa-pencil-square-o fa-3x" aria-hidden="true"></i>
 						</div>
 						<div class="text-center">
-							<h3>Diploma</h3>
+							<h3>Basic</h3>
 						</div>
 						<div>
 							<p>
-								Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Porta non
-								pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. Iaculis urna id volutpat lacus. Turpis egestas
-								pretium aenean pharetra magna ac.
+								This is a 3-months program aimed to get you started in tech. Here, the basics of web/software development is
+								thoroughly dealt with. This is more than enough to get anyone started the field. Students will be able to
+								build a static and informative websites after this class.
 							</p>
 						</div>
 					</div>
@@ -113,13 +112,14 @@
 							<i class="fa fa-book fa-3x" aria-hidden="true"></i>
 						</div>
 						<div class="text-center">
-							<h3>Undergraduate</h3>
+							<h3>Intermediate</h3>
 						</div>
 						<div>
 							<p>
-								Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Porta non
-								pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. Iaculis urna id volutpat lacus. Turpis egestas
-								pretium aenean pharetra magna ac.
+								We assume that the student already know the basics of the core fundamentals of the web (which include the
+								HTML, CSS, and JavaScript). Therefore, we advance the student knowledge by exposing the studnets to some
+								libraries and frameworks that can make the work easier for the students. AFter this class, the student will
+								be able to build a fully functional website as all certified studetns will be full stack developers.
 							</p>
 						</div>
 					</div>
@@ -128,13 +128,15 @@
 							<i class="fa fa-pencil-square fa-3x" aria-hidden="true"></i>
 						</div>
 						<div class="text-center">
-							<h3>Postgraduate</h3>
+							<h3>Advanced</h3>
 						</div>
 						<div>
 							<p>
-								Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Porta non
-								pulvinar neque laoreet. Viverra ipsum nunc aliquet bibendum. Iaculis urna id volutpat lacus. Turpis egestas
-								pretium aenean pharetra magna ac.
+								This is a year program whihch comes with a lot of benefits. Students doing this program are expected to be
+								very serious and ready to learn and go extra mile in solving the problems they will encounter. Students will
+								be thoroughly taught data structures and algorithms as well as System Designs which are basic prerequisite
+								to know in order to work for most of the big companies nowadays. This will help to improve the problem
+								solving skills of the students
 							</p>
 						</div>
 					</div>
@@ -178,7 +180,7 @@
 							<p>
 								Let's get started with the training. You are just one step away from the future that is about to begin now.
 							</p>
-							<a href="./download.html" title="" class="btn btn-primary btn-lg">Appy Now</a>
+							<a href="./contact.html" title="" class="btn btn-primary btn-lg">Appy Now</a>
 						</div>
 					</div>
 				</div>
@@ -247,9 +249,7 @@
 								</a>
 							</p>
 							<p>
-								<small
-									>© Group 5 | Website created with HTML and CSS
-								
+								<small>© Group 5 | Website created with HTML and CSS</small>
 							</p>
 						</div>
 
@@ -276,6 +276,7 @@
 			});
 		</script>
 
-		<script type="text/javascript" src="./main.41beeca9.js"></script>
+		<!-- This is for the navigation bar to work on mobile -->
+		<script type="text/javascript" src="./main.js"></script>
 	</body>
 </html>
