--- a/courses.html
+++ b/courses.html
@@ -16,47 +16,46 @@
 
 		<title>Title page</title>
 
-		<link href="./main.a3f694c0.css" rel="stylesheet" />
+		<link href="./main.css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<!-- Add your content of header -->
 		<header>
 			<nav class="navbar navbar-fixed-top navbar-default">
-        <div class="container">
-          <div class="navbar-header">
-            <button
-              type="button"
-              class="navbar-toggle uarr collapsed"
-              data-toggle="collapse"
-              data-target="#navbar-collapse-uarr"
-            >
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="./index.html" title="">
-              <img src="./assets/images/mashuptemplate.svg" class="navbar-logo-img" alt="" />
-            </a>
-          </div>
-    
-          <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="./index.html" title="Homepage" class="active">Home</a></li>
-              <li><a href="./about.html" title=""> About</a></li>
-              <li><a href="./pricing.html" title=""> Courses </a></li>
-              <li><a href="./contact.html" title=""> Contact</a></li>
-              <li><a href="./contact.html" title="">Staffs</a></li>
-              <li>
-                <p>
-                  <a href="./download.html" class="btn btn-primary navbar-btn" title="">Apply</a>
-                </p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+				<div class="container">
+					<div class="navbar-header">
+						<button
+							type="button"
+							class="navbar-toggle uarr collapsed"
+							data-toggle="collapse"
+							data-target="#navbar-collapse-uarr"
+						>
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="./index.html" title="">
+							<img src="./assets/images/mashuptemplate.svg" class="navbar-logo-img" alt="" />
+						</a>
+					</div>
+
+					<div class="collapse navbar-collapse" id="navbar-collapse-uarr">
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="./index.html" title="Homepage" class="active">Home</a></li>
+							<li><a href="./about.html" title=""> About</a></li>
+							<li><a href="./courses.html" title=""> Courses </a></li>
+							<li><a href="./contact.html" title=""> Contact</a></li>
+							<li>
+								<p>
+									<a href="./apply.html" class="btn btn-primary navbar-btn" title="">Apply</a>
+								</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
 		</header>
 
 		<div class="section-container">
@@ -68,7 +67,10 @@
 						</div>
 						<div class="col-md-8 col-md-offset-2">
 							<p>
-								At GSE Web Development College, we train and certify students to become experts in their respective chosen field. This  
+								At GSE Web Development College, we train and certify students to become experts in their respective chosen
+								field. Prospective students are free to choose between any of the available options to study with us. At the
+								moment, we currently run three different recognized and accredited programs from which each student will
+								have to choose one. See below for details.
 							</p>
 						</div>
 					</div>
@@ -78,7 +80,7 @@
 					<div class="col-md-4">
 						<div class="pricing-card pricing-primary">
 							<h3>Basic</h3>
-							<h6 class="price">20,000 <span>₦/YR</span></h6>
+							<h6 class="price">20,000 <span>₦/3M</span></h6>
 						</div>
 						<div class="pricing-features">
 							<ul class="features">
@@ -87,13 +89,13 @@
 								<li>Basics of Data Structures</li>
 							</ul>
 
-							<a href="contact.html" class="btn btn-primary" title="">Apply</a>
+							<a href="./apply.html" class="btn btn-primary" title="">Apply</a>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="pricing-card pricing-info">
 							<h3>Intermediate</h3>
-							<h6 class="price">30,000 <span>₦/YR</span></h6>
+							<h6 class="price">30,000 <span>₦/6M</span></h6>
 						</div>
 						<div class="pricing-features">
 							<ul class="features">
@@ -103,7 +105,7 @@
 								<li>Three months internship</li>
 							</ul>
 
-							<a href="contact.html" class="btn btn-primary" title="">Apply</a>
+							<a href="./apply.html" class="btn btn-primary" title="">Apply</a>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -119,7 +121,7 @@
 								<li>System Designs</li>
 								<li>Nine months internship</li>
 							</ul>
-							<a href="contact.html" class="btn btn-primary" title="">Apply</a>
+							<a href="./apply.html" class="btn btn-primary" title="">Apply</a>
 						</div>
 					</div>
 				</div>
@@ -149,9 +151,7 @@
 								</a>
 							</p>
 							<p>
-								<small
-									>© Group 5 | Website created with HTML and CSS
-								
+								<small>© Group 5 | Website created with HTML and CSS</small>
 							</p>
 						</div>
 
@@ -178,20 +178,7 @@
 			});
 		</script>
 
-		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
--->
-		<script type="text/javascript" src="./main.41beeca9.js"></script>
+		<!-- This is for the navigation bar to work on mobile -->
+		<script type="text/javascript" src="./main.js"></script>
 	</body>
 </html>
