pushed the recent changes to the website

--- a/courses.html
+++ b/courses.html
@@ -6,7 +6,6 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport" />
 		<meta content="description" name="description" />
 		<meta name="google" content="notranslate" />
-		<meta content="Mashup templates have been developped by Orson.io team" name="author" />
 
 		<!-- Disable tap highlight on IE -->
 		<meta name="msapplication-tap-highlight" content="no" />
@@ -14,7 +13,7 @@
 		<link href="./assets/apple-touch-icon.png" rel="apple-touch-icon" />
 		<link href="./assets/favicon.ico" rel="icon" />
 
-		<title>Title page</title>
+		<title>Courses</title>
 
 		<link href="./main.css" rel="stylesheet" />
 	</head>
@@ -171,12 +170,6 @@
 				</div>
 			</div>
 		</footer>
-
-		<script>
-			document.addEventListener("DOMContentLoaded", function (event) {
-				navActivePage();
-			});
-		</script>
 
 		<!-- This is for the navigation bar to work on mobile -->
 		<script type="text/javascript" src="./main.js"></script>
