--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport" />
 		<meta content="description" name="description" />
 		<meta name="google" content="notranslate" />
-		<meta content="Mashup templates have been developped by Orson.io team" name="author" />
 
 		<!-- Disable tap highlight on IE -->
 		<meta name="msapplication-tap-highlight" content="no" />
@@ -14,7 +13,7 @@
 		<link href="./assets/apple-touch-icon.png" rel="apple-touch-icon" />
 		<link href="./assets/favicon.ico" rel="icon" />
 
-		<title>Title page</title>
+		<title>About Us</title>
 
 		<link href="./main.css" rel="stylesheet" />
 	</head>
@@ -122,9 +121,7 @@
 									JavaScript: We used this to make the navigation responsive and also for the slider in the homepage to
 									work
 								</li>
-								<li>
-									Font Awesome: We used this to load small icons like Facebook, Google icon in the footer
-								</li>
+								<li>Font Awesome: We used this to load small icons like Facebook, Google icon in the footer</li>
 							</ol>
 						</div>
 						<small class="signature pull-right">Group 5</small>
@@ -132,8 +129,6 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- </div> -->
 
 		<footer>
 			<div class="section-container footer-container">
@@ -178,12 +173,6 @@
 				</div>
 			</div>
 		</footer>
-
-		<script>
-			document.addEventListener("DOMContentLoaded", function (event) {
-				navActivePage();
-			});
-		</script>
 
 		<!-- This is for the navigation bar to work on mobile -->
 		<script type="text/javascript" src="./main.js"></script>
