--- a/apply.html
+++ b/apply.html
@@ -6,7 +6,6 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport" />
 		<meta content="description" name="description" />
 		<meta name="google" content="notranslate" />
-		<meta content="Mashup templates have been developped by Orson.io team" name="author" />
 
 		<!-- Disable tap highlight on IE -->
 		<meta name="msapplication-tap-highlight" content="no" />
@@ -14,7 +13,7 @@
 		<link href="./assets/apple-touch-icon.png" rel="apple-touch-icon" />
 		<link href="./assets/favicon.ico" rel="icon" />
 
-		<title>Title page</title>
+		<title>Application Information</title>
 
 		<link href="./main.css" rel="stylesheet" />
 	</head>
@@ -103,7 +102,7 @@
 						<div class="text-center">
 							<blockquote>
 								<p>
-									“Coding is a language spoken by engineers to get problems solved”
+									“Coding is a language spoken by software engineers to get problems solved”
 									<small class="">Ray Collins</small>
 								</p>
 							</blockquote>
@@ -156,12 +155,6 @@
 				</div>
 			</div>
 		</footer>
-
-		<script>
-			document.addEventListener("DOMContentLoaded", function (event) {
-				navActivePage();
-			});
-		</script>
 
 		<!-- This is for the navigation bar to work on mobile -->
 		<script type="text/javascript" src="./main.js"></script>
