--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport" />
 		<meta content="description" name="description" />
 		<meta name="google" content="notranslate" />
-		<meta content="Mashup templates have been developped by Orson.io team" name="author" />
 
 		<!-- Disable tap highlight on IE -->
 		<meta name="msapplication-tap-highlight" content="no" />
@@ -14,7 +13,7 @@
 		<link href="./assets/apple-touch-icon.png" rel="apple-touch-icon" />
 		<link href="./assets/favicon.ico" rel="icon" />
 
-		<title>Title page</title>
+		<title>GSE Web Development College</title>
 
 		<link href="./main.css" rel="stylesheet" />
 	</head>
@@ -85,8 +84,8 @@
 							<div class="text-center">
 								<h2>Our Programs</h2>
 								<p>
-									We provide both undergraduate and postgraduate programs. Prospective students also can enroll in our
-									diploma courses where they can get certified within three months of joining us
+									We provide basic, intermediate and advanced studies to our students. Prospective students also can
+									enroll in our diploma courses where they can get certified within three months of joining us
 								</p>
 							</div>
 						</div>
@@ -187,45 +186,6 @@
 			</div>
 		</div>
 
-		<!-- <div class="section-container">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-7">
-						<img class="img-responsive" src="./assets/images/img-06.png" alt="" />
-					</div>
-
-					<div class="col-md-5">
-						<ul class="features">
-							<li>
-								<h3>Dui augue</h3>
-								<p>Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing.</p>
-							</li>
-							<li>
-								<h3>Malesuada</h3>
-								<p>Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing.</p>
-							</li>
-							<li>
-								<h3>Bibendum</h3>
-								<p>Auctor augue mauris augue neque. Posuere lorem ipsum dolor sit amet consectetur adipiscing.</p>
-							</li>
-						</ul>
-					</div>
-
-					<div class="row">
-						<div class="col-md-4">
-							<img class="img-responsive page-base-image" src="./assets/images/logo-01.png" alt="" />
-						</div>
-						<div class="col-md-4">
-							<img class="img-responsive page-base-image" src="./assets/images/logo-02.png" alt="" />
-						</div>
-						<div class="col-md-4">
-							<img class="img-responsive page-base-image" src="./assets/images/logo-03.png" alt="" />
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
-
 		<footer>
 			<div class="section-container footer-container">
 				<div class="container">
@@ -269,12 +229,6 @@
 				</div>
 			</div>
 		</footer>
-
-		<script>
-			document.addEventListener("DOMContentLoaded", function (event) {
-				navActivePage();
-			});
-		</script>
 
 		<!-- This is for the navigation bar to work on mobile -->
 		<script type="text/javascript" src="./main.js"></script>
